[tool.poetry]
name = "dr-sven"
version = "0.2.1"
description = "A naive serverless data health checker"
authors = ["MeStrak <mestrak@github.com>"]

[tool.semantic_release]
version_variable = [
    "dr_sven/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "master"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install poetry && poetry build"

[tool.poetry.dependencies]
python = "^3.8, <3.9"
pandas = "^1.1.0"
toml = "^0.10.1"
awswrangler = "^1.8.1"
dateparser = "^0.7.6"
nanoid = "^2.0.0"
python-slugify = "^8.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
